--- a/nachos-3.4-linux/nachos-3.4/code/Makefile.common
+++ b/nachos-3.4-linux/nachos-3.4/code/Makefile.common
@@ -44,6 +44,7 @@ THREAD_H =../threads/copyright.h\
 	../threads/system.h\
 	../threads/thread.h\
 	../threads/utility.h\
+	../threads/elevator.h\
 	../machine/interrupt.h\
 	../machine/sysdep.h\
 	../machine/stats.h\
@@ -57,6 +58,8 @@ THREAD_C =../threads/main.cc\
 	../threads/system.cc\
 	../threads/thread.cc\
 	../threads/utility.cc\
+	../threads/elevator.cc\
+	../threads/ElevatorTest.cc\
 	../threads/threadtest.cc\
 	../machine/interrupt.cc\
 	../machine/sysdep.cc\
@@ -66,7 +69,7 @@ THREAD_C =../threads/main.cc\
 THREAD_S = ../threads/switch.s
 
 THREAD_O =main.o list.o scheduler.o synch.o synchlist.o system.o thread.o \
-	utility.o threadtest.o interrupt.o stats.o sysdep.o timer.o
+	utility.o elevator.o ElevatorTest.o threadtest.o interrupt.o stats.o sysdep.o timer.o
 
 USERPROG_H = ../userprog/addrspace.h\
 	../userprog/bitmap.h\
