Add pcb, pcbmanager to makefile

--- a/nachos-3.4-linux/nachos-3.4/code/Makefile.common
+++ b/nachos-3.4-linux/nachos-3.4/code/Makefile.common
@@ -74,6 +74,8 @@ THREAD_O =main.o list.o scheduler.o synch.o synchlist.o system.o thread.o \
 USERPROG_H = ../userprog/addrspace.h\
 	../userprog/bitmap.h\
 	../userprog/memorymanager.h\
+	../userprog/pcbmanager.h\
+	../userprog/pcb.h\
 	../filesys/filesys.h\
 	../filesys/openfile.h\
 	../machine/console.h\
@@ -84,6 +86,8 @@ USERPROG_H = ../userprog/addrspace.h\
 USERPROG_C = ../userprog/addrspace.cc\
 	../userprog/bitmap.cc\
 	../userprog/memorymanager.cc\
+	../userprog/pcbmanager.cc\
+	../userprog/pcb.cc\
 	../userprog/exception.cc\
 	../userprog/progtest.cc\
 	../machine/console.cc\
