--- a/nachos-3.4-linux/nachos-3.4/code/Makefile.common
+++ b/nachos-3.4-linux/nachos-3.4/code/Makefile.common
@@ -96,7 +96,7 @@ USERPROG_C = ../userprog/addrspace.cc\
 	../machine/translate.cc
 
 USERPROG_O = addrspace.o bitmap.o exception.o progtest.o console.o machine.o \
-	mipssim.o translate.o
+	mipssim.o translate.o memorymanager.o pcb.o pcbmanager.o
 
 VM_H = 
 VM_C = 
